// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check UserPool Group Template Generated userpool group stack template during Push one group 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": {
    "ShouldNotCreateEnvResources": {
      "Fn::Equals": [
        {
          "Ref": "env",
        },
        "NONE",
      ],
    },
  },
  "Description": "Root Stack for AWS Amplify CLI",
  "Outputs": {
    "adminGroupRole": {
      "Value": {
        "Fn::GetAtt": [
          "adminGroupRole",
          "Arn",
        ],
      },
    },
  },
  "Parameters": {
    "AuthRoleArn": {
      "Type": "String",
    },
    "UnauthRoleArn": {
      "Type": "String",
    },
    "authmockResourceAppClientID": {
      "Default": "authmockResourceAppClientID",
      "Type": "String",
    },
    "authmockResourceAppClientIDWeb": {
      "Default": "authmockResourceAppClientIDWeb",
      "Type": "String",
    },
    "authmockResourceIdentityPoolId": {
      "Default": "authmockResourceIdentityPoolId",
      "Type": "String",
    },
    "authmockResourceUserPoolId": {
      "Default": "authmockResourceUserPoolId",
      "Type": "String",
    },
    "env": {
      "Type": "String",
    },
  },
  "Resources": {
    "LambdaCloudWatchPolicy": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Sub": [
                  "arn:aws:logs:\${AWS::Region}:\${AWS::AccountId}:log-group:/aws/lambda/\${lambdaName}:log-stream:*",
                  {
                    "lambdaName": {
                      "Ref": "RoleMapFunction",
                    },
                  },
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "UserGroupLogPolicy",
        "Roles": [
          {
            "Ref": "LambdaExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "LambdaExecutionRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "lambda.amazonaws.com",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "cognito-identity:SetIdentityPoolRoles",
                    "cognito-identity:ListIdentityPools",
                    "cognito-identity:describeIdentityPool",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "UserGroupExecutionPolicy",
          },
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "iam:PassRole",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Ref": "AuthRoleArn",
                    },
                    {
                      "Ref": "UnauthRoleArn",
                    },
                  ],
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "UserGroupPassRolePolicy",
          },
        ],
        "RoleName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            "mockResource",
            {
              "Fn::Join": [
                "",
                [
                  "mockResource-ExecutionRole-",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "RoleMapFunction": {
      "Properties": {
        "Code": {
          "ZipFile": "const response = require('cfn-response');
const AWS = require('aws-sdk');
exports.handler = (event, context) => {
  if (event.RequestType == 'Delete') {
    response.send(event, context, response.SUCCESS, { message: 'Request type delete' });
  }
  if (event.RequestType == 'Create' || event.RequestType == 'Update') {
    let { identityPoolId, appClientID, appClientIDWeb, userPoolId, region } = event.ResourceProperties;
    try {
      const cognitoidentity = new AWS.CognitoIdentity();
      let params = {
        IdentityPoolId: identityPoolId,
        Roles: {
          authenticated: event.ResourceProperties.AuthRoleArn,
          unauthenticated: event.ResourceProperties.UnauthRoleArn,
        },
        RoleMappings: {},
      };
      if (appClientIDWeb) {
        params.RoleMappings[\`cognito-idp.\${region}.amazonaws.com/\${userPoolId}:\${appClientIDWeb}\`] = {
          Type: 'Token',
          AmbiguousRoleResolution: 'AuthenticatedRole',
        };
      }
      if (appClientID) {
        params.RoleMappings[\`cognito-idp.\${region}.amazonaws.com/\${userPoolId}:\${appClientID}\`] = {
          Type: 'Token',
          AmbiguousRoleResolution: 'AuthenticatedRole',
        };
      }
      cognitoidentity.setIdentityPoolRoles(params).promise();
      response.send(event, context, response.SUCCESS, { message: 'Successfully updated identity pool.' });
    } catch (err) {
      response.send(event, context, response.FAILED, { message: 'Error updating identity pool' });
    }
  }
};
",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "LambdaExecutionRole",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "RoleMapFunctionInput": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "RoleMapFunction",
      ],
      "Properties": {
        "AuthRoleArn": {
          "Ref": "AuthRoleArn",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "RoleMapFunction",
            "Arn",
          ],
        },
        "UnauthRoleArn": {
          "Ref": "UnauthRoleArn",
        },
        "appClientID": {
          "Ref": "authmockResourceAppClientID",
        },
        "appClientIDWeb": {
          "Ref": "authmockResourceAppClientIDWeb",
        },
        "env": {
          "Ref": "env",
        },
        "identityPoolId": {
          "Ref": "authmockResourceIdentityPoolId",
        },
        "region": {
          "Ref": "AWS::Region",
        },
        "userPoolId": {
          "Ref": "authmockResourceUserPoolId",
        },
      },
      "Type": "Custom::LambdaCallout",
      "UpdateReplacePolicy": "Delete",
    },
    "adminGroup": {
      "Properties": {
        "Description": "override success",
        "GroupName": "admin",
        "Precedence": 1,
        "RoleArn": {
          "Fn::GetAtt": [
            "adminGroupRole",
            "Arn",
          ],
        },
        "UserPoolId": {
          "Ref": "authmockResourceUserPoolId",
        },
      },
      "Type": "AWS::Cognito::UserPoolGroup",
    },
    "adminGroupRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": {
                "ForAnyValue:StringLike": {
                  "cognito-identity.amazonaws.com:amr": "authenticated",
                },
                "StringEquals": {
                  "cognito-identity.amazonaws.com:aud": {
                    "Ref": "authmockResourceIdentityPoolId",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Federated": "cognito-identity.amazonaws.com",
              },
              "Sid": "",
            },
          ],
          "Version": "2012-10-17",
        },
        "RoleName": {
          "Fn::Join": [
            "",
            [
              {
                "Ref": "authmockResourceUserPoolId",
              },
              "-adminGroupRole",
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`Check UserPool Group Template Generated userpool group stack template during Push with two groups 1`] = `
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": {
    "ShouldNotCreateEnvResources": {
      "Fn::Equals": [
        {
          "Ref": "env",
        },
        "NONE",
      ],
    },
  },
  "Description": "Root Stack for AWS Amplify CLI",
  "Outputs": {
    "adminMockGroupRole": {
      "Value": {
        "Fn::GetAtt": [
          "adminMockGroupRole",
          "Arn",
        ],
      },
    },
  },
  "Parameters": {
    "AuthRoleArn": {
      "Type": "String",
    },
    "UnauthRoleArn": {
      "Type": "String",
    },
    "authmockResourceAppClientID": {
      "Default": "authmockResourceAppClientID",
      "Type": "String",
    },
    "authmockResourceAppClientIDWeb": {
      "Default": "authmockResourceAppClientIDWeb",
      "Type": "String",
    },
    "authmockResourceIdentityPoolId": {
      "Default": "authmockResourceIdentityPoolId",
      "Type": "String",
    },
    "authmockResourceUserPoolId": {
      "Default": "authmockResourceUserPoolId",
      "Type": "String",
    },
    "env": {
      "Type": "String",
    },
  },
  "Resources": {
    "LambdaCloudWatchPolicy": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Sub": [
                  "arn:aws:logs:\${AWS::Region}:\${AWS::AccountId}:log-group:/aws/lambda/\${lambdaName}:log-stream:*",
                  {
                    "lambdaName": {
                      "Ref": "RoleMapFunction",
                    },
                  },
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "UserGroupLogPolicy",
        "Roles": [
          {
            "Ref": "LambdaExecutionRole",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "LambdaExecutionRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": [
                "sts:AssumeRole",
              ],
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "lambda.amazonaws.com",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "cognito-identity:SetIdentityPoolRoles",
                    "cognito-identity:ListIdentityPools",
                    "cognito-identity:describeIdentityPool",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "UserGroupExecutionPolicy",
          },
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "iam:PassRole",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Ref": "AuthRoleArn",
                    },
                    {
                      "Ref": "UnauthRoleArn",
                    },
                  ],
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "UserGroupPassRolePolicy",
          },
        ],
        "RoleName": {
          "Fn::If": [
            "ShouldNotCreateEnvResources",
            "mockResource",
            {
              "Fn::Join": [
                "",
                [
                  "mockResource-ExecutionRole-",
                  {
                    "Ref": "env",
                  },
                ],
              ],
            },
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "RoleMapFunction": {
      "Properties": {
        "Code": {
          "ZipFile": "const response = require('cfn-response');
const AWS = require('aws-sdk');
exports.handler = (event, context) => {
  if (event.RequestType == 'Delete') {
    response.send(event, context, response.SUCCESS, { message: 'Request type delete' });
  }
  if (event.RequestType == 'Create' || event.RequestType == 'Update') {
    let { identityPoolId, appClientID, appClientIDWeb, userPoolId, region } = event.ResourceProperties;
    try {
      const cognitoidentity = new AWS.CognitoIdentity();
      let params = {
        IdentityPoolId: identityPoolId,
        Roles: {
          authenticated: event.ResourceProperties.AuthRoleArn,
          unauthenticated: event.ResourceProperties.UnauthRoleArn,
        },
        RoleMappings: {},
      };
      if (appClientIDWeb) {
        params.RoleMappings[\`cognito-idp.\${region}.amazonaws.com/\${userPoolId}:\${appClientIDWeb}\`] = {
          Type: 'Token',
          AmbiguousRoleResolution: 'AuthenticatedRole',
        };
      }
      if (appClientID) {
        params.RoleMappings[\`cognito-idp.\${region}.amazonaws.com/\${userPoolId}:\${appClientID}\`] = {
          Type: 'Token',
          AmbiguousRoleResolution: 'AuthenticatedRole',
        };
      }
      cognitoidentity.setIdentityPoolRoles(params).promise();
      response.send(event, context, response.SUCCESS, { message: 'Successfully updated identity pool.' });
    } catch (err) {
      response.send(event, context, response.FAILED, { message: 'Error updating identity pool' });
    }
  }
};
",
        },
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "LambdaExecutionRole",
            "Arn",
          ],
        },
        "Runtime": "nodejs16.x",
        "Timeout": 300,
      },
      "Type": "AWS::Lambda::Function",
    },
    "RoleMapFunctionInput": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "RoleMapFunction",
      ],
      "Properties": {
        "AuthRoleArn": {
          "Ref": "AuthRoleArn",
        },
        "ServiceToken": {
          "Fn::GetAtt": [
            "RoleMapFunction",
            "Arn",
          ],
        },
        "UnauthRoleArn": {
          "Ref": "UnauthRoleArn",
        },
        "appClientID": {
          "Ref": "authmockResourceAppClientID",
        },
        "appClientIDWeb": {
          "Ref": "authmockResourceAppClientIDWeb",
        },
        "env": {
          "Ref": "env",
        },
        "identityPoolId": {
          "Ref": "authmockResourceIdentityPoolId",
        },
        "region": {
          "Ref": "AWS::Region",
        },
        "userPoolId": {
          "Ref": "authmockResourceUserPoolId",
        },
      },
      "Type": "Custom::LambdaCallout",
      "UpdateReplacePolicy": "Delete",
    },
    "adminMockGroup": {
      "Properties": {
        "Description": "override success",
        "GroupName": "adminMock",
        "Precedence": 2,
        "RoleArn": {
          "Fn::GetAtt": [
            "adminMockGroupRole",
            "Arn",
          ],
        },
        "UserPoolId": {
          "Ref": "authmockResourceUserPoolId",
        },
      },
      "Type": "AWS::Cognito::UserPoolGroup",
    },
    "adminMockGroupRole": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": {
                "ForAnyValue:StringLike": {
                  "cognito-identity.amazonaws.com:amr": "authenticated",
                },
                "StringEquals": {
                  "cognito-identity.amazonaws.com:aud": {
                    "Ref": "authmockResourceIdentityPoolId",
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Federated": "cognito-identity.amazonaws.com",
              },
              "Sid": "",
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "mockActions",
                  ],
                  "Effect": "Allow",
                  "Resource": [
                    "mockArn",
                  ],
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "analytics-pinpoint-policy",
          },
        ],
        "RoleName": {
          "Fn::Join": [
            "",
            [
              {
                "Ref": "authmockResourceUserPoolId",
              },
              "-adminMockGroupRole",
            ],
          ],
        },
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
